additional test cases